<resources>
    <string name="app_name">KonCierge50</string>
    <string name="app_title">KC50 Concierge Application</string>
    <string name="loading_status">Loading</string>
    <string name="search_by_name">Find by name</string>
    <string name="new_attendee">New attendee</string>
    <string name="attendee_registered">You\'ve been registered</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company">Company</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="mail">Email</string>
    <string name="function">Function</string>
    <string name="print">Print</string>
    <string name="close">Close</string>
    <string name="welcome">Welcome</string>
    <string name="from_company">from company</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
	<string name="enter_firstname">Please enter a first name.</string>
	<string name="enter_lastname">Please enter a last name.</string>
	<string name="enter_company">Please enter a company.</string>
	<string name="yes">Yes</string>
	<string name="maybe">Maybe</string>
	<string name="no">No</string>
	<string name="certainly">Certainly</string>
	<string name="with_pleasure">With pleasure</string>
	<string name="without_me">Without me</string>
</resources>