<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:forceDarkAllowed="false"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="341dp"
        android:layout_height="123dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/kc50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewZebra"
        android:layout_width="79dp"
        android:layout_height="119dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/zebra" />

    <LinearLayout
        android:id="@+id/llNewCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtNewPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:hint="@string/first_name"
            android:textColorHint="@color/white"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/txtNewNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:hint="@string/last_name"
            android:textColorHint="@color/white"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/txtNewSociete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:hint="@string/company"
            android:textColorHint="@color/white"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/txtNewMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:hint="@string/mobile_phone"
            android:textColorHint="@color/white"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/txtNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:hint="@string/mail"
            android:textColorHint="@color/white"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/txtNewFonction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:hint="@string/function"
            android:textColorHint="@color/white"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btNewCardImprimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/print" />

            <Button
                android:id="@+id/btNewCardFermer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/close" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPeopleCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/imgStar"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/star" />

        <TextView
            android:id="@+id/tvBienvenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvNomPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Paul Atréide"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/tvSocieteTexte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/from_company"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvSociete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Fremen"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <LinearLayout
            android:id="@+id/llActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btPrint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/print" />

            <Button
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/cancel" />

        </LinearLayout>


    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/actTextView"
        android:layout_width="259dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/search_by_name"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <Button
        android:id="@+id/btNewCardCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register_manually"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>